--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,50 @@
+annotated-types==0.7.0
 asgiref==3.8.1
+attrs==25.1.0
+autobahn==24.4.2
+Automat==24.8.1
+cachetools==5.5.1
+certifi==2025.1.31
+cffi==1.17.1
+channels==4.2.0
+charset-normalizer==3.4.1
+constantly==23.10.4
+cryptography==44.0.1
+daphne==4.1.2
 Django==5.1.6
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.1
+google-api-python-client==2.161.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.4
+googleapis-common-protos==1.67.0
+grpcio==1.70.0
+grpcio-status==1.70.0
+httplib2==0.22.0
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
 pillow==11.1.0
+proto-plus==1.26.0
+protobuf==5.29.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pydantic==2.10.6
+pydantic_core==2.27.2
+pyOpenSSL==25.0.0
+pyparsing==3.2.1
+python-decouple==3.8
+requests==2.32.3
+rsa==4.9
+service-identity==24.2.0
 sqlparse==0.5.3
+tomli==2.2.1
+tqdm==4.67.1
+Twisted==24.11.0
+txaio==23.1.1
 typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.3.0
+zope.interface==7.2
